--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -5,14 +5,10 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "release" ]
   pull_request:
     branches: [ "release" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -39,3 +35,4 @@ jobs:
         uses: ncipollo/release-action@v1.12.0
         with:
           artifacts: "fluffy-furry-origins-datapack.zip"
+          draft: true
