--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -7,10 +7,13 @@ name: CI
 on:
   push:
     branches: [ "release" ]
+    tags:
+      - "*"
   pull_request:
     branches: [ "release" ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    tags:
+      - "*"
+      # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
