--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -6,14 +6,8 @@ name: CI
 # Controls when the workflow will run
 on:
   push:
-    branches: [ "release" ]
-    tags:
-      - "*"
-  pull_request:
-    branches: [ "release" ]
-    tags:
-      - "*"
-      # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches:
+      - release
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -24,6 +18,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+
+      - name: Autotag
+        id: autotag
+        uses: phish108/autotag-action@v1.1.55
 
       - name: Zip Release
         # You may pin to the exact commit or the version.
@@ -39,3 +37,4 @@ jobs:
         with:
           artifacts: "fluffy-furry-origins-datapack.zip"
           draft: true
+          tag: ${{ steps.autotag.outputs.new_tag }}
