--- a/.github/workflows/package_release_dry.yml
+++ b/.github/workflows/package_release_dry.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 
-name: CI
+name: Package Release (Dry run)
 
 # Controls when the workflow will run
 on:
